### 2021.03.10 - [index.html] header부분 메뉴등 레이아웃 작업 - [index.html] quick 영역, slide 영역 프로토 작업 - [jquery.html] 신규페이지 생성 및 컨텐츠 업데이트 - [htm.html] 컨텐츠 업데이트

--- a/guideLine/html/index.html
+++ b/guideLine/html/index.html
@@ -8,195 +8,211 @@
     <base href="../assets/" target="_blank" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 <body>
     <header>
-        <h1>What to do!?</h1>
-        <nav>
-            <div>GuideLine</div>
-            <div>Html5</div>
-            <div>CSS</div>
-            <div>SASS</div>
-            <div>Git</div>
-            <div>Svelte</div>
-        </nav>
+        <section>
+            <h1><a href="">What to do!?</a></h1>
+            <nav id="menuList">
+                <div><a href="">GuideLine</a></div>
+                <div><a href="">Html5</a></div>
+                <div><a href="">CSS</a></div>
+                <div><a href="">SASS</a></div>
+                <div><a href="">Git</a></div>
+                <div><a href="">Jquery</a></div>
+                <div><a href="">Svelte</a></div>
+            </nav>
+        </section>
+        <section>
+            <aside class="Quick">
+                퀵메뉴
+            </aside>
+        </section>
     </header>
-    <main id="container">
-        <section>
-            slider 영역
+    <main>
+        <section id="sliderContainer">
+            <input type="button" id="test" value="slider 영역">
         </section>
-        <section>
-            <h2>MY PROJECT</h2>
-            <h3>2021</h3>
-            <section class="projectList">
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2021/capture-main2021-01.png" alt="부천 한빛도서관">
-                        <figcaption>부천 한빛도서관</figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="" alt="평택주차포털">
-                        <figcaption>평택주차포털</figcaption>
-                    </figure>
-                </article>
+        <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+        <script>
+            var x = '1';
+            $(document).on("click", "#test", function(){
+                console.log(x);
+            });
+        </script>
+        <section id="container">
+            <section>
+                <h2>MY PROJECT</h2>
+                <h3>2021</h3>
+                <section class="projectList">
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2021/capture-main2021-01.png" alt="부천 한빛도서관">
+                            <figcaption>부천 한빛도서관</figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="" alt="평택주차포털">
+                            <figcaption>평택주차포털</figcaption>
+                        </figure>
+                    </article>
+                </section>
+                <h3>2020</h3>
+                <section class="projectList">
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2020/capture-main2020-01.png" alt="양주시설관리공단">
+                            <figcaption><a href="">양주시설관리공단</a></figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2020/capture-main2020-02.png" alt="부천노상앱">
+                            <figcaption>부천노상앱</figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2020/capture-main2020-03.png" alt="수원주차포털">
+                            <figcaption><a href="https://parking.suwonudc.co.kr/">수원주차포털</a></figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2020/capture-main2020-04.png" alt="부천주차포털">
+                            <figcaption><a href="https://parking.bcits.go.kr/">부천주차포털</a></figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2020/capture-main2020-05.png" alt="한강 통합주차포털">
+                            <figcaption><a href="https://www.ihangangpark.kr/">한강 통합주차포털</a></figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2020/capture-main2020-06.png" alt="Inerv-manager">
+                            <figcaption>Inerv-manager</figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2020/capture-main2020-07.png" alt="High-chart">
+                            <figcaption>High-chart</figcaption>
+                        </figure>
+                    </article>
+                </section>
+                <h3>2019</h3>
+                <section class="projectList">
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2019/capture-main2019-01.png" alt="뉴오리진">
+                            <figcaption><a href="https://www.neworigin.co.kr/">뉴오리진</a></figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2019/capture-main2019-02.png" alt="강아지왕국(&고양이왕국)">
+                            <figcaption><a href="https://www.dogskingdom.co.kr/">강아지왕국(&고양이왕국)</a></figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2019/capture-main2019-03.png" alt="동원몰">
+                            <figcaption><a href="https://www.dongwonmall.com/index.do">동원몰</a></figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2019/capture-main2019-04.png" alt="빅커피">
+                            <figcaption><a href="https://www.bigcoffee.co.kr/">빅커피</a></figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2019/capture-main2019-05.png" alt="사진노리">
+                            <figcaption><a href="http://sajinory.com/service_dnp/index_dnp.php">사진노리</a></figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2019/capture-main2019-06.png" alt="픽스토리">
+                            <figcaption><a href="https://www.pixstory.co.kr/main/index.php">픽스토리</a></figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/no-image.png" alt="성원부동산">
+                            <figcaption>성원부동산</figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/no-image.png" alt="범아">
+                            <figcaption>범아</figcaption>
+                        </figure>
+                    </article>
+                </section>
+                <h3>2018</h3>
+                <section class="projectList">
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2018/capture-main2018-01.png" alt="구리시여성노인회관">
+                            <figcaption><a href="http://www.guri.go.kr/main/edu">구리시여성노인회관</a></figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2018/capture-main2018-02.png" alt="인천영종역사관">
+                            <figcaption><a href="https://www.icjg.go.kr/museum/index">인천영종역사관</a></figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2018/capture-main2018-03.png" alt="IFEZ">
+                            <figcaption><a href="https://www.ifez.go.kr/noti001">IFEZ</a></figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2018/capture-main2018-04.png" alt="서울열린데이터">
+                            <figcaption><a href="https://data.seoul.go.kr/">서울열린데이터</a></figcaption>
+                        </figure>
+                    </article>
+                </section>
+                <h3>2012~2017</h3>
+                <section class="projectList">
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2017/capture-main2017-01.png" alt="정부24">
+                            <figcaption><a href="https://www.gov.kr/portal/main">정부24</a></figcaption>
+                        </figure>
+                    </article>
+                    <article class="project-item">
+                        <figure>
+                            <img src="../assets/images/capture/2017/capture-main2017-02.png" alt="충남지역사회서비스지원단">
+                            <figcaption><a href="https://cnss.or.kr/">충남지역사회서비스지원단</a></figcaption>
+                        </figure>
+                    </article>
+                </section>
             </section>
-            <h3>2020</h3>
-            <section class="projectList">
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2020/capture-main2020-01.png" alt="양주시설관리공단">
-                        <figcaption><a href="">양주시설관리공단</a></figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2020/capture-main2020-02.png" alt="부천노상앱">
-                        <figcaption>부천노상앱</figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2020/capture-main2020-03.png" alt="수원주차포털">
-                        <figcaption><a href="https://parking.suwonudc.co.kr/">수원주차포털</a></figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2020/capture-main2020-04.png" alt="부천주차포털">
-                        <figcaption><a href="https://parking.bcits.go.kr/">부천주차포털</a></figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2020/capture-main2020-05.png" alt="한강 통합주차포털">
-                        <figcaption><a href="https://www.ihangangpark.kr/">한강 통합주차포털</a></figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2020/capture-main2020-06.png" alt="Inerv-manager">
-                        <figcaption>Inerv-manager</figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2020/capture-main2020-07.png" alt="High-chart">
-                        <figcaption>High-chart</figcaption>
-                    </figure>
-                </article>
-            </section>
-            <h3>2019</h3>
-            <section class="projectList">
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2019/capture-main2019-01.png" alt="뉴오리진">
-                        <figcaption><a href="https://www.neworigin.co.kr/">뉴오리진</a></figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2019/capture-main2019-02.png" alt="강아지왕국(&고양이왕국)">
-                        <figcaption><a href="https://www.dogskingdom.co.kr/">강아지왕국(&고양이왕국)</a></figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2019/capture-main2019-03.png" alt="동원몰">
-                        <figcaption><a href="https://www.dongwonmall.com/index.do">동원몰</a></figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2019/capture-main2019-04.png" alt="빅커피">
-                        <figcaption><a href="https://www.bigcoffee.co.kr/">빅커피</a></figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2019/capture-main2019-05.png" alt="사진노리">
-                        <figcaption><a href="http://sajinory.com/service_dnp/index_dnp.php">사진노리</a></figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2019/capture-main2019-06.png" alt="픽스토리">
-                        <figcaption><a href="https://www.pixstory.co.kr/main/index.php">픽스토리</a></figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/no-image.png" alt="성원부동산">
-                        <figcaption>성원부동산</figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/no-image.png" alt="범아">
-                        <figcaption>범아</figcaption>
-                    </figure>
-                </article>
-            </section>
-            <h3>2018</h3>
-            <section class="projectList">
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2018/capture-main2018-01.png" alt="구리시여성노인회관">
-                        <figcaption><a href="http://www.guri.go.kr/main/edu">구리시여성노인회관</a></figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2018/capture-main2018-02.png" alt="인천영종역사관">
-                        <figcaption><a href="https://www.icjg.go.kr/museum/index">인천영종역사관</a></figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2018/capture-main2018-03.png" alt="IFEZ">
-                        <figcaption><a href="https://www.ifez.go.kr/noti001">IFEZ</a></figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2018/capture-main2018-04.png" alt="서울열린데이터">
-                        <figcaption><a href="https://data.seoul.go.kr/">서울열린데이터</a></figcaption>
-                    </figure>
-                </article>
-            </section>
-            <h3>2012~2017</h3>
-            <section class="projectList">
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2017/capture-main2017-01.png" alt="정부24">
-                        <figcaption><a href="https://www.gov.kr/portal/main">정부24</a></figcaption>
-                    </figure>
-                </article>
-                <article class="project-item">
-                    <figure>
-                        <img src="../assets/images/capture/2017/capture-main2017-02.png" alt="충남지역사회서비스지원단">
-                        <figcaption><a href="https://cnss.or.kr/">충남지역사회서비스지원단</a></figcaption>
-                    </figure>
-                </article>
-            </section>
-        </section>
-        <section>
-            <h2>SKILL</h2>
-            <article>
+            <section>
+                <h2>SKILL</h2>
+                <article>
 
-            </article>
+                </article>
+            </section>
         </section>
     </main>
     <footer>
         <section>
             <article>
-                저작권
+                Copyrights &copy; 2018-2021 SeWoong, All Rights Reserved.
             </article>
             <article>
                 <ul>
-                    <li>전화번호</li>
+                    <li><a href="tel:010-4263-1501" target="_self">  010-4263-1501 </a></li>
                     <li>메일보내기</li>
                 </ul>
             </article>
