### 2021.03.11 - [공통] header, footer include 작업 - [svelte.html] "선언적랜더링" 컨텐츠 업데이트 - [README.md] README 페이지 신규 생성

--- a/guideLine/html/sub/github.html
+++ b/guideLine/html/sub/github.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIT&GITHUB</title>
-    <base href="../../assets/" target="_blank" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../../assets/css/style.css">
     
+    <!-- javascript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script defer src="../../assets/js/common.js"></script>
 </head>
 <body>
-    <header>
-
-    </header>
+    <header id="header"></header>
     <main id="container">
         <section id="gitCli">
             <h2>GIT (CLI)</h2>
@@ -128,8 +128,6 @@
             </table>
         </section>
     </main>
-    <footer>
-
-    </footer>
+    <footer id="footer"></footer>
 </body>
 </html>
