--- a/guideLine/html/sub/htm.html
+++ b/guideLine/html/sub/htm.html
@@ -5,30 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO</title>
-    <base href="../../assets/" target="_blank" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../../assets/css/style.css">
+    <!-- javascript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script defer src="../../assets/js/common.js"></script>
 </head>
 <body>
-    <header>
-        <section>
-            <h1>What to do!?</h1>
-            <nav id="menuList">
-                <div><a href="">GuideLine</a></div>
-                <div><a href="">Html5</a></div>
-                <div><a href="">CSS</a></div>
-                <div><a href="">SASS</a></div>
-                <div><a href="">Git</a></div>
-                <div><a href="">Jquery</a></div>
-                <div><a href="">Svelte</a></div>
-            </nav>
-        </section>
-        <section>
-            <aside class="Quick">
-                퀵메뉴
-            </aside>
-        </section>
-    </header>
+    <header id="header"></header>
     <main>
         <section id="container">
             <section>
@@ -40,18 +24,6 @@
             </section>
         </section>
     </main>
-    <footer>
-        <section>
-            <article>
-                Copyrights &copy; 2018-2021 SeWoong, All Rights Reserved.
-            </article>
-            <article>
-                <ul>
-                    <li><a href="tel:010-4263-1501" target="_self">  010-4263-1501 </a></li>
-                    <li>메일보내기</li>
-                </ul>
-            </article>
-        </section>
-    </footer>
+    <footer id="footer"></footer>
 </body>
 </html>
