--- a/guideLine/html/sub/sass.html
+++ b/guideLine/html/sub/sass.html
@@ -7,7 +7,6 @@
     <title>PORTFOLIO</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
-
     <!-- javascript -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script defer src="../../assets/js/common.js"></script>
@@ -17,32 +16,7 @@
     <main>
         <section id="container">
             <section>
-                <h2>JQUERY</h2>
-                <h3>기본태그(동적)</h3>
-                <article>
-                    <xmp>
-$(document).on("click", "[클래스 & 아이디 & 속성]", function(){
-
-});
-                    </xmp>
-                </article>
-                <h3>클릭시 특정앨리먼트로 이동</h3>
-                <article>
-                    <xmp>
-<span class="gallery">gallery</span>
-<section id="image">
-    <article>
-        <img src="" alt="일본여행">
-    </article>
-</section>
-
-$(document).on("click", ".gallery", function(){
-    const move = $("#image").offset().top;
-    
-    $('html, body').animate({scrollTop : move}, 300);
-});
-                    </xmp>   
-                </article>
+                <h2>SASS</h2>
             </section>
         </section>
     </main>
