--- a/guideLine/html/sub/svelte.html
+++ b/guideLine/html/sub/svelte.html
@@ -6,66 +6,85 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <base href="../../assets/" target="_blank" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../../assets/css/style.css">
+
+    <!-- javascript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script defer src="../../assets/js/common.js"></script>
 </head>
 <body>
-    <header id="header">
-
-    </header>
-    <main id="container">
-        <section id="characteristic">
-            <h2>Svelte 특징</h2>
-            <ol>
-                <li>
-                    <p>Diffing 이나  Overhead 가 일어나지 않아 처리속도 가 빠르다.</p>
+    <header id="header"></header>
+    <main>
+        <section id="container">
+            <section>
+                <h2>Svelte</h2>
+                <h3>Svelte 특징</h3>
+                <article class="explanation-box">
+                    <ol>
+                        <li>
+                            <p>Diffing 이나  Overhead 가 일어나지 않아 처리속도 가 빠르다.</p>
+                            <ul>
+                                <li>diffing : "가상돔(Virtual DOM)"을 생성하고 비교하는 행위</li>
+                                <li>Overhead : 어떤 처리를 위해 들어가는, 간접적인 시간이나 메모리</li>
+                            </ul>
+                        </li>
+                        <li>애플리케이션 상태의 변화가 DOM에 자동으로 반영 (반응성)</li>
+                    </ol>
+                </article>
+                <h3>Svelte 단점</h3>
+                <article class="explanation-box">
                     <ul>
-                        <li>diffing : "가상돔(Virtual DOM)"을 생성하고 비교하는 행위</li>
-                        <li>Overhead : 어떤 처리를 위해 들어가는, 간접적인 시간이나 메모리</li>
+                        <li>작은 생태계 (2019년 4월 3릴리즈)</li>
+                        <li>runtime으로 동작하지 않기 때문에 CDN 미제공</li>
+                        <li>IE 미지원</li>
                     </ul>
-                </li>
-                <li>애플리케이션 상태의 변화가 DOM에 자동으로 반영 (반응성)</li>
-            </ol>
-        </section>
-        <section id="disadvantages">
-            <h2>Svelte 단점</h2>
-            <ul>
-                <li>작은 생태계 (2019년 4월 3릴리즈)</li>
-                <li>runtime으로 동작하지 않기 때문에 CDN 미제공</li>
-                <li>IE 미지원</li>
-            </ul>
-        </section>
-        <section id="disadvantages">
-            <h2>Svelte 명령어</h2>
-            <table class="default-table">
-                <colgroup>
-                    <col style="width: 25%" />
-                    <col style="width: 75%" />
-                </colgroup>
-                <tbody>
-                    <tr>
-                        <th scope="row">npx degit sveltejs/template [프로젝트명]</th>
-                        <td>프로젝트 생성및 설치</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">code .</th>
-                        <td>현재 프로젝트 열기</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">npm i</th>
-                        <td>프로젝트 모듈 설치</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">npm run dev</th>
-                        <td>프로젝트 실행</td>
-                    </tr>
-                </tbody>
-            </table>
+                </article>
+                <h3>Svelte 명령어</h3>
+                <table class="default-table">
+                    <colgroup>
+                        <col style="width: 25%" />
+                        <col style="width: 75%" />
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th scope="row">npx degit sveltejs/template [프로젝트명]</th>
+                            <td>프로젝트 생성및 설치</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">code .</th>
+                            <td>현재 프로젝트 열기</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">npm i</th>
+                            <td>프로젝트 모듈 설치</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">npm run dev</th>
+                            <td>프로젝트 실행</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <h3>선언적 랜더링</h3>
+                <table class="default-table">
+                    <colgroup>
+                        <col style="width: 25%" />
+                        <col style="width: 75%" />
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th scope="row">바인딩(One-way)</th>
+                            <td>&lt; input type="text" value=<span class="bold">{name}</span> /&gt; </td>
+                        </tr>
+                        <tr>
+                           <th scope="row">바인딩(Bidirectional)</th> 
+                           <td>&lt; input type="text" <span class="bold">bind:</span>value={name} /&gt; </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
         </section>
     </main>
-    <footer id="footer">
-
-    </footer>
+    <footer id="footer"></footer>
 </body>
 </html>
