--- a/guideLine/html/main/index.html
+++ b/guideLine/html/main/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="../../assets/css/style.css">
     
     <!-- javascript -->
-    <!-- <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script defer src="../../assets/js/common.js"></script>
 </head>
 <body>
@@ -192,5 +192,39 @@
         </section>
     </main>
     <footer id="footer"></footer>
+    <script>
+        $('.post-wrapper').slick({
+            slide: '.post', //슬라이드 할 태그
+            Infinity : true, // 무한반복 옵션
+            slidesToShow: 1, // 한 화면에 보여줄 컨텐츠 개수
+            slidesToScroll : 1, // 스크롤 될 때 한번에 움직일 컨텐츠 개수
+            speed: 100, //  버튼 누르고 다음 화면 뜨는데까지 걸리는 시간
+            arrows: true, // 화살표 유무
+            dots: false, // 스크롤바 아래 도트유무
+            autoplay: true, // 자동스크롤 사용여부
+            autoplaySpeed: 2000, // 자동스크롤 다음으로 넘어가는데 걸리는 시간
+            pauseOnHover: true, // 슬라이드 이동시 마우스 호버시 상태설정
+            vertical: false, // 세로방향 슬라이드 옵션
+            prevArrow:"<button type='button' class=''>prev</button>", //이전버튼
+            nextArrow:"<button type='button' class=''>next</button>", //다음버튼
+            dotsClass:"slider-dots", // 아래 버튼 css 클래스 설정
+            draggable: false, // 드래그 가능여부
+
+            Responsive: [
+                {
+                    breakpoint: 320,
+                    settings:{
+                        slidesToShow:1
+                    }
+                },
+                {
+                    breakpoint: 320,
+                    settings:{
+                        slidesToShow:1
+                    }
+                }
+            ]
+        });
+</script>
 </body>
 </html>
