--- a/pyeongtaek/html/main/index.html
+++ b/pyeongtaek/html/main/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <section>
-            <h1><a href="">What to do!?</a></h1>
+            <h1><a href="./index.html">What to do!?</a></h1>
             <nav id="menuList">
                 <div><a href="../sub/portal.html">평택주차포털</a></div>
                 <div><a href="../sub/tpms.html">평택주차TPMS</a></div>
