--- a/pyeongtaek/html/sub/portal.html
+++ b/pyeongtaek/html/sub/portal.html
@@ -4,111 +4,195 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PORTFOLIO</title>
+    <title>평택시 주차포털</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="../../assets/css/style.css">
     
     <!-- javascript -->
-    <!-- <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script defer src="../../assets/js/common.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script defer src="../../assets/js/ui.js"></script>
 </head>
 <body>
     <header>
         <section>
-            <article>
-                <h1><a href="../main/index.html">평택시 로고</a></h1>
-                <nav id="">
-                    <div><a href="">로그인</a></div>
-                    <div><a href="">회원가입</a></div>
-                    <div>
-                        <select>
-                            <option><a href="">KOR</a></option>
-                            <option><a href="">ENG</a></option>
-                            <option><a href=""></a></option>
-                        </select>
-                    </div>
-                </nav>
+            <article id="gnbTop">
+                <div class="gnbTop-inner">
+                    <h1><a href="../main/index.html">평택시 로고</a></h1>
+                    <nav> 
+                        <div><a href="">로그인</a></div>
+                        <div><a href="">회원가입</a></div>
+                        <div>
+                            <select>
+                                <option><a href="">KOR</a></option>
+                                <option><a href="">ENG</a></option>
+                                <option><a href=""></a></option>
+                            </select>
+                        </div>
+                    </nav>
+                </div>
             </article>
-            <article>
-                <nav id="menuList">
-                    <div><a href="">공영주차장</a></div>
-                    <div><a href="">주차요금 사전결제</a></div>
-                    <div><a href="">미납주차요금</a></div>
-                    <div><a href="">무정차정산 신청</a></div>
-                    <div><a href="">공영주차장 정기권</a></div>
-                    <div><a href="">요금감면 자격확인</a></div>
-                    <div><a href="">열린공간</a></div>
-                </nav>
+            <article id="gnbNav">
+                <div class="gnbNav-inner">
+                    <nav id="menuList">
+                        <div><a href="">공영주차장</a></div>
+                        <div><a href="">주차요금 사전결제</a></div>
+                        <div><a href="">미납주차요금</a></div>
+                        <div><a href="">무정차정산 신청</a></div>
+                        <div><a href="">공영주차장 정기권</a></div>
+                        <div><a href="">요금감면 자격확인</a></div>
+                        <div><a href="">열린공간</a></div>
+                    </nav>
+                </div>
             </article>
         </section>
     </header>
     <main>
-        <section id="">
-            <div class="">
-                <div class="">스마트 주차서비스1</div>
-                <div class="">스마트 주차서비스2</div>
-                <div class="">스마트 주차서비스3</div>
+        <section id="mainSlider">
+            <div id="slider">
+                <article class="slider-item">
+                    <div>
+                        <h2>스마트 주차서비스</h2>
+                        <p>시민 중심 새로운 평택!</p>
+                        <p>평택 시민들을 위한 편안한 주차 서비스를 이용해보세요</p>
+                    </div>
+                </article>
+                <article class="slider-item">
+                    <div>
+                        <h2>스마트 주차서비스</h2>
+                        <p>시민 중심 새로운 평택! 평택시민들을 위한</p>
+                        <p>편안한 주차 서비스를 이용해보세요</p>
+                    </div>
+                </article>
+                <article class="slider-item">
+                    <div>
+                        <h2>시민 중심 새로운 평택!</h2>
+                        <p>도시의 질서, 평택도시공사와 함께합니다</p>
+                    </div>
+                    <div>
+                        <p>희망으로 도약하는 도시 평택!</p>
+                        <p>도농복합 국제도시로 나아가는 진취적인 도시 평택</p>
+                    </div>
+                </article>
             </div>
         </section>
         <section id="container">
-            <article>
-                <h2>간편한 주차 서비스</h2>
-                <section>
-                    <article>주차요금 사전결제</article>
-                    <article>미납주차 요금</article>
-                    <article>공영주차장 지도검색</article>
-                    <article>요금감면 자격확인</article>
-                </section>
+            <article class="parking-service">
+                <div class="parkingbox-inner">
+                    <p class="subheading">SMART & CONVENIENT SERVICE</p>
+                    <h2>간편한 주차 서비스</h2>
+                    <div class="service-list">
+                        <div class="service-item">
+                            <img src="" alt="주차요금 사전결제">
+                            <p>주차요금 사전결제</p>
+                        </div>
+                        <div>
+                            <img src="" alt="미납주차 요금">
+                            <p>미납주차 요금</p>
+                        </div>
+                        <div>
+                            <img src="" alt="공영주차장 지도검색">
+                            <p>공영주차장 지도검색</p>
+                        </div>
+                        <div>
+                            <img src="" alt="요금감면 자격확인">
+                            <p>요금감면 자격확인</p>
+                        </div>
+                    </div>
+                </div>
             </article>
-            <article>
-                <article>
-                    <p>INFINITE</p>
-                    <p><span>무한한</span>서비스 연계</p>
-                </article>
-                <article>
-                    <p>SIMPLE</p>
-                    <p><span>간편한</span>서비스 활용</p>
-                </article>
-                <article>
-                    <p>PERFEC</p>
-                    <p><span>완벽한</span>서비스 관리</p>
-                </article>
-            </article>
-            <article>
-                <section>
-                    <p>공지사항</p>
+            <article class="parking-realtime">
+                <div class="parkingbox-inner">
+                    <p class="subheading">평택시 실시간 주차장 현황을 한눈에!</p>
+                    <h2>실시간 주차장 현황</h2>
                     <ul>
                         <li>
-                            <h3>2020. 00. 00</h3>
-                            <p>정기권 연장 결제 안내 및 공지</p>
-                            <p>코로나 19확산방지를 위한 공영주차장 무료운영...</p>
+                            <div>
+                            <ul>
+                                <li>평택시체육복지센터</li>
+                                <li>주차가능: 00면</li>
+                            </ul> 
+                            </div>
                         </li>
                         <li>
-                            <h3>2020. 00. 00</h3>
-                            <p>정기권 연장 결제 안내 및 공지</p>
-                            <p>코로나 19확산방지를 위한 공영주차장 무료운영...</p>
+                            <div>
+                            <ul>
+                                <li>평택시체육복지센터</li>
+                                <li>주차가능: 00면</li>
+                            </ul> 
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                            <ul>
+                                <li>평택시체육복지센터</li>
+                                <li>주차가능: 00면</li>
+                            </ul> 
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                            <ul>
+                                <li>평택시체육복지센터</li>
+                                <li>주차가능: 00면</li>
+                            </ul> 
+                            </div>
                         </li>
                     </ul>
-                    <p>READ MORE</p>
-                </section>
-                <section>
-                    <p>자주하는 질문</p>
-                    <ul>
-                        <li>
-                            <h3>2020. 00. 00</h3>
-                            <p>정기권 연장 결제 안내 및 공지</p>
-                            <p>코로나 19확산방지를 위한 공영주차장 무료운영...</p>
-                        </li>
-                        <li>
-                            <h3>2020. 00. 00</h3>
-                            <p>정기권 연장 결제 안내 및 공지</p>
-                            <p>코로나 19확산방지를 위한 공영주차장 무료운영...</p>
-                        </li>
-                    </ul>
-                    <p>READ MORE</p>
-                </section>
+                </div>
+            </article>
+            <article class="parking-appeal">
+                <div class="parkingbox-inner">
+                    <div>
+                        <p>INFINITE</p>
+                        <p><span>무한한</span>서비스 연계</p>
+                    </div>
+                    <div>
+                        <p>SIMPLE</p>
+                        <p><span>간편한</span>서비스 활용</p>
+                    </div>
+                    <div>
+                        <p>PERFEC</p>
+                        <p><span>완벽한</span>서비스 관리</p>
+                    </div>
+                </div>
+            </article>
+            <article class="parking-info">
+                <div class="parkingbox-inner">
+                    <section>
+                        <p>공지사항</p>
+                        <ul>
+                            <li>
+                                <h3>2020. 00. 00</h3>
+                                <p>정기권 연장 결제 안내 및 공지</p>
+                                <p>코로나 19확산방지를 위한 공영주차장 무료운영...</p>
+                            </li>
+                            <li>
+                                <h3>2020. 00. 00</h3>
+                                <p>정기권 연장 결제 안내 및 공지</p>
+                                <p>코로나 19확산방지를 위한 공영주차장 무료운영...</p>
+                            </li>
+                        </ul>
+                        <p>READ MORE</p>
+                    </section>
+                    <section>
+                        <p>자주하는 질문</p>
+                        <ul>
+                            <li>
+                                <h3>2020. 00. 00</h3>
+                                <p>정기권 연장 결제 안내 및 공지</p>
+                                <p>코로나 19확산방지를 위한 공영주차장 무료운영...</p>
+                            </li>
+                            <li>
+                                <h3>2020. 00. 00</h3>
+                                <p>정기권 연장 결제 안내 및 공지</p>
+                                <p>코로나 19확산방지를 위한 공영주차장 무료운영...</p>
+                            </li>
+                        </ul>
+                        <p>READ MORE</p>
+                    </section>
+                </div>
             </article>
         </section>
     </main>
@@ -131,5 +215,36 @@
             </article>
         </section>
     </footer>
+    <script>
+            $('#slider').slick({
+                slide: '.slider-item',
+                Infinity : true,
+                slidesToShow: 1,
+                slidesToScroll : 1,
+                speed: 100,
+                arrows: false,
+                dots: false,
+                autoplay: true,
+                autoplaySpeed: 2000,
+                pauseOnHover: true,
+                vertical: false,
+                draggable: false,
+
+                Responsive: [
+                    {
+                        breakpoint: 320,
+                        settings:{
+                            slidesToShow:1
+                        }
+                    },
+                    {
+                        breakpoint: 320,
+                        settings:{
+                            slidesToShow:1
+                        }
+                    }
+                ]
+            });
+    </script>
 </body>
 </html>
